--- a/homework05/src/main/resources/application.yml
+++ b/homework05/src/main/resources/application.yml
@@ -1,11 +1,12 @@
 spring:
   datasource:
+    #    url: jdbc:h2:tcp://localhost/testdb;AUTO_SERVER=TRUE
     url: jdbc:h2:mem:testdb
-#  sql:
-#    init:
-#      mode: always
-#      data-locations: data.sql
-#      schema-locations: schema.sql
+  sql:
+    init:
+      mode: always
+      data-locations: data.sql
+  #      schema-locations: schema.sql
   h2:
     console:
       path: /h2-console
