complete homework 06 bugfix 01

--- a/homework06/src/main/resources/db/changelog/migrations/db.changelog-1.1.yaml
+++ b/homework06/src/main/resources/db/changelog/migrations/db.changelog-1.1.yaml
@@ -95,7 +95,7 @@ databaseChangeLog:
                   name: book_id
                   type: bigint
                   constraints:
-                    nullable: false
+                    nullable: true
                     foreignKeyName: fk_book_id
                     references: books(id)
             tableName: book_comments
